--- a/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toetsmatrijs/Index.cshtml
+++ b/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toetsmatrijs/Index.cshtml
@@ -4,66 +4,50 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Toetsmatrijs overzicht</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.moduleNaam)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.moduleCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.makerID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.aanmaakdatum)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.laatstGewijzigdDoor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.datumGewijzigd)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.prestatieIndicator)
-        </th>
-        <th></th>
-    </tr>
+<row>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.moduleCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.moduleNaam)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.studiejaar)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.blokperiode)
+            </th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.moduleNaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.moduleCode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.makerID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.aanmaakdatum)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.laatstGewijzigdDoor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.datumGewijzigd)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.prestatieIndicator)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.moduleCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.moduleNaam)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.studiejaar)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.blokperiode)
+                </td>
+                @*<td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                </td>*@
+            </tr>
+        }
 
-</table>
+    </table>
+</row>
