Navbar hyperlinks toegevoegd
Alle knoppen zouden nu moeten werken als iedereen zich aan de default views houd

--- a/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/_LayoutToetsGenerator.cshtml
+++ b/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/_LayoutToetsGenerator.cshtml
@@ -15,10 +15,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="Home">Home</a>
-                <a class="nav-item nav-link" href="#">Toetsmatrijs</a>
-                <a class="nav-item nav-link" href="#">Toets</a>
-                <a class="nav-item nav-link" href="#">Vragen</a>
+                <a class="nav-item nav-link" href="/Home">Home</a>
+                <a class="nav-item nav-link" href="/Toetsmatrijs">Toetsmatrijs</a>
+                <a class="nav-item nav-link" href="/Toets">Toets</a>
+                <a class="nav-item nav-link" href="/Toetsopgaves">Vragen</a>
             </div>
         </div>
         <a class="navbar-brand" href="Home">
