--- a/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toetsmatrijs/Details.cshtml
+++ b/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toetsmatrijs/Details.cshtml
@@ -70,5 +70,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Bewerk kenniselementen", "Index", "Kenniselement") |
     @Html.ActionLink("Back to List", "Index")
 </p>
