--- a/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toets/Delete.cshtml
+++ b/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toets/Delete.cshtml
@@ -76,11 +76,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.makerID)
+            @Html.DisplayNameFor(model => model.maker)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.makerID)
+            @Html.DisplayFor(model => model.maker)
         </dd>
 
         <dt>
