--- a/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toets/Index.cshtml
+++ b/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toets/Index.cshtml
@@ -36,7 +36,7 @@
             @Html.DisplayNameFor(model => model.examinatoren)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.makerID)
+            @Html.DisplayNameFor(model => model.maker)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.aanmaakDatum)
@@ -80,7 +80,7 @@
             @Html.DisplayFor(modelItem => item.examinatoren)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.makerID)
+            @Html.DisplayFor(modelItem => item.maker)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.aanmaakDatum)
