Spacertabel  voor kenniselementen in detailpagina.

--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Details.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Details.cshtml
@@ -68,6 +68,47 @@
 
     </dl>
 </div>
+<h4>Comment: Spacer voor kenniselement-tabel, onderstaand is een voobeeld van gewenste uitwerking.</h4>
+<div>
+    <table class="table">
+        <tr>
+            <th>
+                Kenniselement
+            </th>
+            <th>
+                Reproductie punten
+            </th>
+            <th>
+                Begrip punten
+            </th>
+            <th>
+                Toepassing punten
+            </th>
+            <th>
+                Totaal
+            </th>
+            <th>
+                Percentage
+            </th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>3</td>
+            <td>0</td>
+            <td>0</td>
+            <td>3</td>
+            <td>20</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>0</td>
+            <td>6</td>
+            <td>0</td>
+            <td>6</td>
+            <td>40</td>
+        </tr>
+    </table>
+</div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Voeg Kennis Element Toe", "Index", "Kenniselement") |
