--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Delete.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Delete.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.moduleNaam)
+            Module naam
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.moduleCode)
+            Module code
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.makerID)
+            Maker ID
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.aanmaakdatum)
+            Aanmaak datum
         </dt>
 
         <dd>
@@ -44,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.laatstGewijzigdDoor)
+            Laatst gewijzigd door
         </dt>
 
         <dd>
@@ -52,7 +52,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.datumGewijzigd)
+            Datum gewijzigd
         </dt>
 
         <dd>
@@ -60,7 +60,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.prestatieIndicator)
+            Prestatie indicator
         </dt>
 
         <dd>
@@ -69,7 +69,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
