--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Kenniselement/Create.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Kenniselement/Create.cshtml
@@ -7,16 +7,16 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Kenniselement</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.matrijsID, "matrijsID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Toetsmatrijs</label>
             <div class="col-md-10">
                 @Html.DropDownList("matrijsID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.matrijsID, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.inhoud, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Inhoud</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.inhoud, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.inhoud, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.aantalReproductie, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Aantal reproductie</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.aantalReproductie, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.aantalReproductie, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.aantalBegrip, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Aantal begrip</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.aantalBegrip, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.aantalBegrip, "", new { @class = "text-danger" })
@@ -48,7 +48,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.aantalToepassing, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Aantal toepassing</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.aantalToepassing, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.aantalToepassing, "", new { @class = "text-danger" })
