--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Kenniselement/Index.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Kenniselement/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Kenniselement overzicht</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -12,46 +12,47 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Toetsmatrijs.moduleNaam)
+            Module naam
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.inhoud)
+            Inhoud
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.aantalReproductie)
+            Aantal reproductie
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.aantalBegrip)
+            Aantal begrip
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.aantalToepassing)
+            Aantal Toepassing
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Toetsmatrijs.moduleNaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.inhoud)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.aantalReproductie)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.aantalBegrip)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.aantalToepassing)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Toetsmatrijs.moduleNaam)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.inhoud)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.aantalReproductie)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.aantalBegrip)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.aantalToepassing)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+            </td>
+        </tr>
+    }
 
 </table>
