--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Index.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Index.cshtml
@@ -1,69 +1,59 @@
 ﻿@model IEnumerable<D1_2_B2D3_Casus_Toetsgenerator.Models.Toetsmatrijs>
-
 @{
     ViewBag.Title = "Index";
 }
+<h2>Toetsmatrijs overzicht</h2>
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.moduleNaam)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.moduleCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.makerID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.aanmaakdatum)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.laatstGewijzigdDoor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.datumGewijzigd)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.prestatieIndicator)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.moduleNaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.moduleCode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.makerID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.aanmaakdatum)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.laatstGewijzigdDoor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.datumGewijzigd)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.prestatieIndicator)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
-
-</table>
+<div>
+    <p>
+        @using (Html.BeginForm("Index", "toetsmatrijs", FormMethod.Get))
+        {
+        <p>
+            Modeule code: @Html.DropDownList("moduleCode", "All")
+            <input type="submit" value="Filter" />
+        </p>
+        @Html.ActionLink("Create New", "Create")
+    }
+        </p>
+    </div>
+    <div>
+        <table class="table">
+            <tr>
+                <th>
+                    Module code
+                </th>
+                <th>
+                    Module naam
+                </th>
+                <th>
+                    Aanmaak datum
+                </th>
+                <th>
+                    Datum gewijzigd
+                </th>
+                <th></th>
+            </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.moduleCode)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.moduleNaam)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.aanmaakdatum)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.datumGewijzigd)
+                    </td>
+                    <td>
+                        @*@Html.ActionLink("Edit", "Edit", new { id = item.ID }) |*@
+                        @Html.ActionLink("Details", "Details", new { id = item.ID }) @*|
+                            @Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
